Adds readme and frontend

--- a/.fluence/workers.yaml
+++ b/.fluence/workers.yaml
@@ -6,18 +6,4 @@
 
 version: 1
 
-deals:
-  {
-    local:
-      {
-        myDeployment:
-          {
-            definition: bafkreicxcv34olfeeh3vive25ouyezaix5t5wmgaioahisx3hwwqqq77hy,
-            timestamp: 2024-06-01T07:28:07.589Z,
-            dealIdOriginal: "0xCe85503De9399D4dECa3c0b2bb3e9e7CFCBf9C6B",
-            dealId: ce85503de9399d4deca3c0b2bb3e9e7cfcbf9c6b,
-            chainNetwork: local,
-            chainNetworkId: 31337
-          }
-      }
-  }
+deals: {}
